tests/Checker/everything/errors/11a.vc
int main() {
    int a[3] = {1, 2, 3};
    a;
    return 0;
}
